js/src/tests/test262/built-ins/Error/constructor.js
var
message
=
"
my
-
message
"
;
var
cause
=
{
message
:
"
my
-
cause
"
}
;
var
sequence
=
[
]
;
new
Error
(
{
toString
(
)
{
sequence
.
push
(
"
toString
"
)
;
return
message
;
}
}
{
get
cause
(
)
{
sequence
.
push
(
"
cause
"
)
;
return
cause
;
}
}
)
;
assert
.
deepEqual
(
sequence
[
"
toString
"
"
cause
"
]
"
accessing
own
properties
on
sequence
"
)
;
reportCompare
(
0
0
)
;
